Update jabgui/src/main/java/org/jabref/gui/menus/ChangeEntryTypeMenu.java
Co-authored-by: Oliver Kopp <kopp.dev@gmail.com>